--- a/apps/minting-dapp-ui/package.json
+++ b/apps/minting-dapp-ui/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "contract": "*",
     "merkletreejs": "^0.2.31",
     "next": "^12.1.0",
     "react": "^17.0.2",
