--- a/apps/smart-contract/package.json
+++ b/apps/smart-contract/package.json
@@ -4,7 +4,9 @@
   "description": "Stick Pplz NFT Contract",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "accounts": "hardhat accounts",
+    "compile": "hardhat compile --force",
+    "test": "hardhat test"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +14,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@openzeppelin/contracts": "^4.5.0",
     "@typechain/ethers-v5": "^9.0.0",
     "@typechain/hardhat": "^5.0.0",
     "@types/chai": "^4.3.0",
@@ -39,5 +42,8 @@
     "ts-node": "^10.7.0",
     "typechain": "^7.0.1",
     "typescript": "^4.6.2"
+  },
+  "volta": {
+    "node": "14.19.0"
   }
 }
