feat: added tailwindcss

--- a/apps/smart-contract/package.json
+++ b/apps/smart-contract/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "accounts": "hardhat accounts",
     "compile": "hardhat compile --force",
-    "test": "hardhat test"
+    "test": "hardhat test",
+    "deploy": "hardhat run scripts/deploy.ts"
   },
   "author": "",
   "license": "ISC",
