--- a/apps/minting-dapp-ui/package.json
+++ b/apps/minting-dapp-ui/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@alch/alchemy-web3": "^1.2.5",
+    "@tailwindcss/typography": "^0.5.2",
+    "@usedapp/core": "^0.12.1",
     "axios": "^0.26.1",
     "contract": "*",
+    "install": "^0.13.0",
     "merkletreejs": "^0.2.31",
     "next": "^12.1.0",
+    "npm": "^8.5.5",
     "react": "^17.0.2",
     "react-countdown": "^2.3.2",
     "react-dom": "17.0.2",
@@ -27,6 +32,7 @@
     "eslint": "^8.11.0",
     "next-transpile-modules": "^9.0.0",
     "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23",
     "tsconfig": "*",
     "typescript": "^4.5.3"
   }
