--- a/apps/minting-dapp-ui/package.json
+++ b/apps/minting-dapp-ui/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@alch/alchemy-web3": "^1.2.5",
+    "@ethersproject/contracts": "^5.6.0",
     "@tailwindcss/typography": "^0.5.2",
     "@usedapp/core": "^0.12.1",
+    "@walletconnect/web3-provider": "^1.7.5",
     "axios": "^0.26.1",
     "contract": "*",
     "install": "^0.13.0",
@@ -21,7 +23,8 @@
     "react": "^17.0.2",
     "react-countdown": "^2.3.2",
     "react-dom": "17.0.2",
-    "react-query": "^3.34.16"
+    "react-query": "^3.34.16",
+    "web3modal": "^1.9.5"
   },
   "devDependencies": {
     "@testing-library/react": "^12.1.4",
