--- a/apps/minting-dapp-ui/package.json
+++ b/apps/minting-dapp-ui/package.json
@@ -24,6 +24,7 @@
     "react-countdown": "^2.3.2",
     "react-dom": "17.0.2",
     "react-query": "^3.34.16",
+    "sass": "^1.49.9",
     "web3modal": "^1.9.5"
   },
   "devDependencies": {
