--- a/apps/minting-dapp-ui/package.json
+++ b/apps/minting-dapp-ui/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@alch/alchemy-web3": "^1.2.5",
     "@ethersproject/contracts": "^5.6.0",
+    "@radix-ui/react-icons": "^1.1.0",
+    "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
     "@usedapp/core": "^0.12.1",
     "@walletconnect/web3-provider": "^1.7.5",
     "axios": "^0.26.1",
     "contract": "*",
+    "ethers": "^5.6.1",
     "install": "^0.13.0",
     "merkletreejs": "^0.2.31",
     "next": "^12.1.0",
@@ -23,6 +26,7 @@
     "react": "^17.0.2",
     "react-countdown": "^2.3.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-query": "^3.34.16",
     "sass": "^1.49.9",
     "web3modal": "^1.9.5"
