--- a/apps/smart-contract/package.json
+++ b/apps/smart-contract/package.json
@@ -7,7 +7,15 @@
     "accounts": "hardhat accounts",
     "compile": "hardhat compile --force",
     "test": "hardhat test",
-    "deploy": "hardhat run scripts/deploy.ts"
+    "deploy": "hardhat run scripts/1_deploy.ts",
+    "whitelist-open": "hardhat run scripts/2_whitelist_open.ts",
+    "whitelist-close": "hardhat run scripts/3_whitelist_close.ts",
+    "presale-open": "hardhat run scripts/4_presale_open.ts",
+    "presale-close": "hardhat run scripts/5_presale_close.ts",
+    "public-sale-open": "hardhat run scripts/6_public_sale_open.ts",
+    "public-sale-close": "hardhat run scripts/7_public_sale_close.ts",
+    "reveal": "hardhat run scripts/8_reveal.ts",
+    "verify": "hardhat verify --constructor-args config/ContractArguments.ts"
   },
   "author": "",
   "license": "ISC",
@@ -36,6 +44,8 @@
     "ethers": "^5.6.1",
     "hardhat": "^2.9.1",
     "hardhat-gas-reporter": "^1.0.8",
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.2.31",
     "prettier": "^2.6.0",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solhint": "^3.3.7",
