--- a/apps/smart-contract/tsconfig.json
+++ b/apps/smart-contract/tsconfig.json
@@ -1,13 +1,15 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "target": "es2018",
     "module": "commonjs",
-    "strict": true,
+    "isolatedModules": false,
+    "strict": false,
     "esModuleInterop": true,
     "outDir": "dist",
     "declaration": true,
     "resolveJsonModule": true
   },
-  "include": ["./scripts", "./test", "./typechain"],
+  "include": ["**/*.ts", "**/*.js"],
   "files": ["./hardhat.config.ts"]
 }
