--- a/apps/minting-dapp-ui/package.json
+++ b/apps/minting-dapp-ui/package.json
@@ -12,10 +12,12 @@
     "@alch/alchemy-web3": "^1.2.5",
     "@ethersproject/contracts": "^5.6.0",
     "@radix-ui/react-icons": "^1.1.0",
+    "@radix-ui/react-toast": "^0.1.1",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
     "@usedapp/core": "^0.12.1",
     "@walletconnect/web3-provider": "^1.7.5",
+    "@web3-react/injected-connector": "^6.0.7",
     "axios": "^0.26.1",
     "contract": "*",
     "ethers": "^5.6.1",
@@ -28,6 +30,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-query": "^3.34.16",
+    "react-toastify": "^8.2.0",
     "sass": "^1.49.9",
     "web3modal": "^1.9.5"
   },
