feat: added deployment commands from root package.json

--- a/apps/smart-contract/package.json
+++ b/apps/smart-contract/package.json
@@ -7,15 +7,18 @@
     "accounts": "hardhat accounts",
     "compile": "hardhat compile --force",
     "test": "hardhat test",
+    "local-node": "hardhat node",
+    "root-hash": "hardhat generate-root-hash",
+    "proof": "hardhat generate-proof",
     "deploy": "hardhat run scripts/1_deploy.ts",
+    "verify": "hardhat verify --constructor-args config/ContractArguments.ts",
     "whitelist-open": "hardhat run scripts/2_whitelist_open.ts",
     "whitelist-close": "hardhat run scripts/3_whitelist_close.ts",
     "presale-open": "hardhat run scripts/4_presale_open.ts",
     "presale-close": "hardhat run scripts/5_presale_close.ts",
     "public-sale-open": "hardhat run scripts/6_public_sale_open.ts",
     "public-sale-close": "hardhat run scripts/7_public_sale_close.ts",
-    "reveal": "hardhat run scripts/8_reveal.ts",
-    "verify": "hardhat verify --constructor-args config/ContractArguments.ts"
+    "reveal": "hardhat run scripts/8_reveal.ts"
   },
   "author": "",
   "license": "ISC",
