--- a/packages/lib-config/package.json
+++ b/packages/lib-config/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "config",
+  "name": "lib-config",
   "version": "0.0.0",
-  "main": "index.js",
   "license": "MIT",
   "files": [
     "eslint-next.js",
