--- a/apps/minting-dapp-ui/package.json
+++ b/apps/minting-dapp-ui/package.json
@@ -39,7 +39,8 @@
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.37",
     "autoprefixer": "^10.4.4",
-    "config": "*",
+    "app-config": "*",
+    "lib-config": "*",
     "eslint": "^8.11.0",
     "next-transpile-modules": "^9.0.0",
     "postcss": "^8.4.12",
